--- a/src/main/java/Frame.form
+++ b/src/main/java/Frame.form
@@ -11,7 +11,7 @@
       <inheritsPopupMenu value="false"/>
       <minimumSize width="500" height="500"/>
     </properties>
-    <border type="etched" title="PDF Converter" title-justification="2" title-position="2">
+    <border type="etched" title-justification="2" title-position="2">
       <font style="1"/>
     </border>
     <children>
@@ -40,6 +40,7 @@
           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font/>
           <name value="combo"/>
           <requestFocusEnabled value="true"/>
           <toolTipText value="Output formats"/>
@@ -65,6 +66,7 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Hack"/>
           <text value="to: "/>
         </properties>
       </component>
