--- a/src/main/java/Frame.form
+++ b/src/main/java/Frame.form
@@ -7,7 +7,7 @@
     </constraints>
     <properties>
       <focusCycleRoot value="true"/>
-      <font/>
+      <font name="DialogInput"/>
       <inheritsPopupMenu value="false"/>
       <minimumSize width="500" height="500"/>
     </properties>
@@ -20,7 +20,7 @@
           <grid row="1" column="1" row-span="3" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Monospaced" size="14"/>
+          <font name="DialogInput"/>
           <label value="Convert"/>
           <text value="Convert"/>
         </properties>
@@ -30,9 +30,9 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Monospaced" size="14"/>
-          <label value="Choose PDF From Files"/>
-          <text value="Choose PDF From Files"/>
+          <font name="DialogInput"/>
+          <label value="Choose a PDF from files"/>
+          <text value="Choose a PDF from files"/>
         </properties>
       </component>
       <component id="6bcb6" class="javax.swing.JComboBox" binding="comboBox">
@@ -40,7 +40,7 @@
           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Monospaced" size="14"/>
+          <font name="DialogInput"/>
           <name value="combo"/>
           <requestFocusEnabled value="true"/>
           <toolTipText value="Output formats"/>
@@ -66,7 +66,8 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Monospaced" size="14"/>
+          <font name="DialogInput"/>
+          <labelFor value="6bcb6"/>
           <text value="to: "/>
         </properties>
       </component>
